fixed SignIn and SignUp buttons vertical-align to middle

--- a/day030_plantify_react_app/src/components/Button/Button.css
+++ b/day030_plantify_react_app/src/components/Button/Button.css
@@ -7,9 +7,12 @@
     border-radius: 5px;
     margin:5px;
     width:100px;
+    user-select: none;
 }
+
 .signInBtn:hover{
     background-color:rgb(132, 190, 178);
+    color:rgb(0,0,0);
     cursor:pointer;
 }
 
@@ -23,10 +26,11 @@
     border-radius: 5px;
     margin:5px;
     width:100px;
-
+    user-select: none;
 }
 .signUpBtn:hover{
     background-color:rgb(142, 204, 161);
+    color:rgb(0,0,0);
     cursor:pointer;
 }
 
