--- a/day030_plantify_react_app/src/layouts/Header/Header.css
+++ b/day030_plantify_react_app/src/layouts/Header/Header.css
@@ -1,14 +1,13 @@
-.display-inline{
-    display: inline-block;
+.wrapper{
+    display: flex;
 }
 
-.float-right{
-    float:right;
-}
-
-.header{
+.header {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     background-color: rgb(79, 90, 90);
     margin:10px;
     padding:10px;
-
 }
